# ModularMusicVisualizer

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  Readme.md  SECURITY.md  THANKYOU.md  example.py  example_basic.py  example_pygradienter.py  example_video.py  ps.py  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: opening-issues---generic-guide.md
App/: Magic.py  MakeRelease.py  Prototype.py  RunEditor.py  TestExternalsManager.py
App/MMV/: PackageInterface.py  RenderConfig.py  __init__.py
App/MMV/Common/: AnyLogger.py  BudgetVsync.py  DearPyGuiUtils.py  Download.py  ExternalsManager.py  PackUnpack.py  Polyglot.py  Utils.py
App/mmv/: PackageInterface.py  RenderConfig.py
Scripts/: MakeCountryFlags.sh  MakeReleaseLinux.sh  MakeReleaseWindows.sh
docs/: CONTRIBUTING.md  EXTRAS.md  HACKING.md  IDEAS.md  RUNNING.md  RUNNING_ON_LINUX.md  RUNNING_ON_MACOS.md  RUNNING_ON_WINDOWS.md  RUNNING_TLDR.md
mmv/: README.md  __init__.py  assets.py  audio.py  canvas.py  context.py  controller.py  core.py  debug.py  end_user_utilities.py  example_basic.py  example_pygradienter.py  example_video.py  experiments.py  fourier.py  frame.py  functions.py  interpolation.py  main.py  mmv_animation.py  mmv_canvas.py  mmv_context.py  mmv_core.py  mmv_image.py  mmv_main.py  mmv_visualizer.py  mmv_worker.py  mmvanimation.py  mmvgenerator.py  mmvimage.py  mmvvisualizer.py  modifiers.py  requirements.py  requirements.txt  setup.py  svg.py  utils.py  video.py
mmv/common/: audio.py  frame.py  functions.py  interpolation.py  linearalgebra.py  svg.py  utils.py
mmv/mmv/: __init__.py  make_release.py  mmv_animation.py  mmv_classes.py  mmv_configure.py  mmv_context.py  mmv_controller.py  mmv_core.py  mmv_end_user.py  mmv_generator.py  mmv_image.py  mmv_image_configure.py  mmv_interpolation.py  mmv_main.py  mmv_modifiers.py  mmv_music_bar.py  mmv_piano_roll.py  mmv_vectorial.py  mmv_visualizer.py  mmv_worker.py  requirements.txt  temp_deprecated_mmvanimation.py
mmv/modules/: end_user_utilities.py
mmv/pygradienter/: __init__.py  linearalgebra.py  main.py  node.py  processing.py  pyg_main.py  pyg_noise.py  pyg_processing.py  pygradienter.py  requirements.txt  settings.yaml  utils.py
mmv_shader/: README.md  experiment.py
mmv_shader/mmvshader/: __init__.py  mmv_shader_maker.py  mmv_shader_mpv.py  mmv_shader_utils.py  mmv_utils.py
mmv_skia/: example_basic.py  experiments.py
mmv_skia/mmv/: __init__.py  mmv_animation.py  mmv_context.py  mmv_core.py  mmv_end_user.py  mmv_generator.py  mmv_image.py  mmv_image_configure.py  mmv_interpolation.py  mmv_main.py  mmv_modifiers.py  mmv_music_bar.py  mmv_piano_roll.py  mmv_progression_bar.py  mmv_vectorial.py  requirements.txt
mmv_skia/modules/: make_release.py
src/: Magic.py  MakeRelease.py  README.md  RunEditor.py  assets.py  audio.py  base_video.py  canvas.py  context.py  controller.py  core.py  example_basic.py  fourier.py  frame.py  functions.py  future_shaders.py  interpolation.py  main.py  mmvanimation.py  mmvgenerator.py  mmvimage.py  mmvparticle.py  mmvvisualizer.py  modifiers.py  post_process_video.py  post_processsing.py  prototype.py  requirements.txt  run_jumpcutter.py  run_shaders.py  run_skia.py  svg.py  utils.py  video.py
src/mmv/: PackageInterface.py  __init__.py  cli_command.sh  config.yaml  experiments.py  mmv_enums.py  prelude.toml  render_config.py  requirements-dev.txt  requirements.txt  test.py  test_mgl.py  test_otherglsl.glsl
src/modules/: end_user_utilities.py  piano_roll_colors_helper.py
src/scripts/: update_requirements_txt.sh
(+375 files in other folders)
