[tool.poetry]
name = "mmv"
version = "3.1"
description = "High quality video music visualization tool for the music production community. Support for Music Bars and Piano Roll mode, Video as background, enable / disable whatever you want. Hack the code at your will. Real Time mode for live DJing"
authors = ["Tremeschin <https://tremeschin.gitlab.io/>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
moderngl = "^5.6.4"
moderngl-window = "^2.3.0"
SoundCard = "^0.4.1"
glfw = "^2.1.0"
PyYAML = "^5.4.1"
mido = "^1.2.9"
wget = "^3.2"
tqdm = "^4.59.0"
opencv-python-headless = "^4.5.1"
wheel = "^0.36.2"
imgui = "^1.3.0"
samplerate = "^0.1.0"
colorama = "^0.4.4"
typer = "^0.3.2"
watchdog = "^2.0.2"
pyunpack = "^0.2.2"
requests = "^2.25.1"
scipy = "^1.6.2"
ujson = "^4.0.2"
pyFluidSynth = "^1.3.0"
dotmap = "^1.3.23"
numpy-quaternion = "^2021.4.5"
intervaltree = "^3.1.0"
wonderwords = "^2.2.0"
numba = "^0.53.1"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"

[tool.poetry.scripts]
jumpcutter = "src.run_jumpcutter:_"
prototype = "src.prototype:main"
shaders = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
